--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <DOCTYPE html>
 <html>
-	<body>
-		Hello Sensorial
-	</body>
+<body>
+	<div class="container" style="display: flex;justify-content: center;">
+  		<div style="display: flex;justify-content: center;flex-direction: column;">
+    			<img src="https://avatars.githubusercontent.com/u/75798520?s=200&amp;v=4" alt="centered image">
+    			<p style="text-align: center;">Sensorial Systems</p>
+    		</div>
+	</div>
+</body>
 </html>
