Added title and favicon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <DOCTYPE html>
 <html>
+<head>
+	<title>Sensorial Systems</title>
+	<link rel="shortcut icon" type="image/jpg" href="favicon.png">
+</head>
 <body>
 	<div class="container" style="display: flex;justify-content: center;">
   		<div style="display: flex;justify-content: center;flex-direction: column;">
