--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
 	<title>Sensorial Systems</title>
 	<link rel="shortcut icon" type="image/jpg" href="favicon.png">
+	<style>
+		body {
+			margin: 0;
+		}
+		.container {
+			display: flex;
+			justify-content: center;
+			width: 100%;
+			height: 100%;
+		}
+	</style>
 </head>
 <body>
-	<div class="container" style="display: flex;justify-content: center;">
+	<div class="container">
   		<div style="display: flex;justify-content: center;flex-direction: column;">
-    			<img src="https://avatars.githubusercontent.com/u/75798520?s=200&amp;v=4" alt="centered image">
-    			<p style="text-align: center;">Sensorial Systems</p>
+			<a href="https://github.com/sensorial-systems">
+	    			<img src="https://avatars.githubusercontent.com/u/75798520?s=200&amp;v=4" alt="centered image">
+			</a>
     		</div>
 	</div>
 </body>
